feat : UserStorage 삭제 요청시 List로 여러 값 요청, 삭제